--- a/mystyle.css
+++ b/mystyle.css
@@ -4,3 +4,16 @@
   margin-right: auto;
   width: 50%;
 }
+
+.header img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
+}
