--- a/mystyle.css
+++ b/mystyle.css
@@ -7,7 +7,13 @@
 
 .header img {
   float: left;
-  width: 1000px;
-  height: 250px;
+  width: 100px;
+  height: 100px;
   background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 360px;
+  left: 200px;
 }
