--- a/mystyle.css
+++ b/mystyle.css
@@ -13,7 +13,9 @@
 }
 
 .header h1 {
-  position: relative;
-  top: 360px;
-  left: 200px;
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
 }
